fix: Some MiniPlaceholders integration fixes