@@ -3,76 +3,70 @@ package dev.eymen;
 import dev.eymen.customfont.CustomFontManager;
 import io.github.miniplaceholders.api.Expansion;
 import me.clip.placeholderapi.PlaceholderAPI;
-import net.kyori.adventure.text.minimessage.MiniMessage;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
 import net.kyori.adventure.text.minimessage.tag.Tag;
 import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
 
-import static dev.eymen.ChatBeautifier.instance;
+public final class MiniPlaceholders {
+    private final ChatBeautifier plugin;
 
-public class MiniPlaceholders {
+    public MiniPlaceholders(ChatBeautifier plugin) {
+        this.plugin = plugin;
+    }
+
     public void init() {
-        if (Bukkit.getPluginManager().getPlugin("MiniPlaceholders") != null) {
-            try {
-                instance.getLogger().info("MiniPlaceholders found, registering placeholders.");
-                MiniMessage mm = MiniMessage.miniMessage();
-                Expansion.Builder customFontsBuilder = Expansion.builder("customfonts");
-                customFontsBuilder.globalPlaceholder("convertglobal", (queue, ctx) -> {
-                    Tag.Argument font = null;
-                    Tag.Argument givenInput = null;
-                    while (queue.hasNext()) {
-                        font = queue.popOr("No font provided.");
-                        givenInput = queue.popOr("No string provided.");
-                    }
+        if (!Bukkit.getPluginManager().isPluginEnabled("MiniPlaceholders")) {
+            plugin.getLogger().warning("Couldn't register custom font placeholders, because MiniPlaceholders was not found.");
+            return;
+        }
 
-                    if (font == null || font.value().trim().isEmpty()) {
-                        return Tag.selfClosingInserting(mm.deserialize("<red>No font provided."));
-                    }
+        try {
+            plugin.getLogger().info("MiniPlaceholders found, registering placeholders.");
+            final Expansion expansion = Expansion.builder("customfonts")
+                    .globalPlaceholder("convertglobal", (queue, ctx) -> {
+                        final String font;
+                        final String input;
 
-                    if (givenInput == null || givenInput.value().trim().isEmpty()) {
-                        return Tag.selfClosingInserting(mm.deserialize("<red>No string provided."));
-                    }
+                        if (!queue.hasNext() || (font = queue.pop().value()).trim().isBlank()) {
+                            return Tag.selfClosingInserting(Component.text("No font provided.", NamedTextColor.RED));
+                        }
+                        if (!queue.hasNext() || (input = queue.pop().value()).trim().isBlank()) {
+                            return Tag.selfClosingInserting(Component.text("No string provided.", NamedTextColor.RED));
+                        }
 
-                    if (!instance.customFontManager.customFonts.contains(font.value())) {
-                        return Tag.selfClosingInserting(mm.deserialize("<red>Font isn't valid."));
-                    }
+                        if (!plugin.customFontManager.customFonts.contains(font)) {
+                            return Tag.selfClosingInserting(Component.text("Font isn't valid.", NamedTextColor.RED));
+                        }
 
-                    return Tag.selfClosingInserting(CustomFontManager.convert(font.value(), PlaceholderAPI.setBracketPlaceholders(null, givenInput.value())));
-                });
-                customFontsBuilder.audiencePlaceholder("convertplayer", (audience, queue, ctx) -> {
-                    Tag.Argument font = null;
-                    Tag.Argument givenInput = null;
-                    while (queue.hasNext()) {
-                        font = queue.popOr("No font provided.");
-                        givenInput = queue.popOr("No string provided.");
-                    }
+                        return Tag.selfClosingInserting(CustomFontManager.convert(font, PlaceholderAPI.setBracketPlaceholders(null, input)));
+                    })
+                    .audiencePlaceholder("convertplayer", (audience, queue, ctx) -> {
+                        final String font;
+                        final String input;
 
-                    if (font == null || font.value().trim().isEmpty()) {
-                        return Tag.selfClosingInserting(mm.deserialize("<red>No font provided."));
-                    }
+                        if (!queue.hasNext() || (font = queue.pop().value()).trim().isBlank()) {
+                            return Tag.selfClosingInserting(Component.text("No font provided.", NamedTextColor.RED));
+                        }
+                        if (!queue.hasNext() || (input = queue.pop().value()).trim().isBlank()) {
+                            return Tag.selfClosingInserting(Component.text("No string provided.", NamedTextColor.RED));
+                        }
 
-                    if (givenInput == null || givenInput.value().trim().isEmpty()) {
-                        return Tag.selfClosingInserting(mm.deserialize("<red>No string provided."));
-                    }
-
-                    if (!instance.customFontManager.customFonts.contains(font.value())) {
-                        return Tag.selfClosingInserting(mm.deserialize("<red>Font isn't valid."));
-                    }
-                    return Tag.selfClosingInserting(CustomFontManager.convert(font.value(), PlaceholderAPI.setBracketPlaceholders((Player) audience, givenInput.value())));
-                });
-                Expansion expansion = customFontsBuilder.build();
-                if (!expansion.registered()) {
-                    expansion.register();
-                    instance.getLogger().info("Registered MiniPlaceholders placeholders.");
-                    return;
-                }
-                instance.getLogger().warning("Couldn't register MiniPlaceholders placeholders, because they're already registered.");
-                return;
-            } catch (NoClassDefFoundError ignored) {
-                instance.getLogger().warning("Couldn't register custom font placeholders, because MiniPlaceholders was not found.");
+                        if (!plugin.customFontManager.customFonts.contains(font)) {
+                            return Tag.selfClosingInserting(Component.text("Font isn't valid.", NamedTextColor.RED));
+                        }
+                        return Tag.selfClosingInserting(CustomFontManager.convert(font, PlaceholderAPI.setBracketPlaceholders((Player) audience, input)));
+                    })
+                    .build();
+            if (!expansion.registered()) {
+                expansion.register();
+                plugin.getLogger().info("Registered MiniPlaceholders placeholders.");
                 return;
             }
+            plugin.getLogger().warning("Couldn't register MiniPlaceholders placeholders, because they're already registered.");
+        } catch (NoClassDefFoundError ignored) {
+            plugin.getLogger().warning("Couldn't register custom font placeholders, because MiniPlaceholders was not found.");
         }
-        instance.getLogger().warning("Couldn't register custom font placeholders, because MiniPlaceholders was not found.");
     }
 }
